app/assets/stylesheets/blog.css.scss
@import 'compass/css3';

@mixin colorize($color) {
  @include background-image(linear-gradient(lighten($color, 3%), $color));
  border-bottom: 1px solid darken($color, 5%);

  &:before {
    content: ' ';
    display: block;
    border-bottom: 1px solid lighten($color, 5%);
  }
}

.clearfix {
  display: block;

  &:after {
    clear: both;
    content: ".";
    display: block;
    height: 0;
    line-height: 0;
    visibility: hidden;
  }
}


body {
  padding-left: 0 !important;
  padding-right: 0 !important;
  color: #333;
}

.visible-desktop li.blog-entry {
  padding-left: 0;
  padding-right: 0;
}

ul.blog-entries {
  list-style: none;
  margin: 0;

  li.blog-entry-in-list {
    width: 100%;

    @include colorize(lighten(#6ad1e3, 20%));
    &:nth-child(2n+2) {
      @include colorize(lighten(#6ad1e3, 10%));
    }
  }
}


.blog-entry {
  margin: 0 auto;
  overflow: hidden;
  max-width: 700px;
  padding: 3% 2%;

  .entry {
    @include box-sizing(border-box);
    padding: 0 1.5em;
    float: left;
    width: 100%;
    max-width: 600px;

    .title {
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow-x: hidden;
      opacity: 0.8;

      @media only screen and (max-width: 600px) {
        font-size: 23px;
        line-height: 23px;
      }

      a {
        color: inherit;
      }
    }
  }

  .published-at-oneline {
    display: block;
    color: #333;
    padding: 0 1.5em;
    opacity: 0.5;
  }

  .published-at {
    display: none;
  }

  @media only screen and (min-width: 600px) {
    .entry {
      width: 80%;
    }
    .published-at-oneline {
      display: none;
    }

    .published-at {
      display: block;
      float: left;
      width: 100px;
      opacity: 0.6;
      text-align: center;

      .day {
        font-size: 80px;
        line-height: 80px;
        font-weight: bold;
        letter-spacing: -2px;
      }

      .month {
        font-size: 30px;
        line-height: 30px;
        text-transform: uppercase;
        letter-spacing: 6px;
      }

      .year {
        font-size: 28px;
        line-height: 28px;
        font-weight: bold;
        opacity: 0.5;
      }

      .comments {
        a {
          color: #555;
          font-size: 12px;
          opacity: 0.3;

          &:hover, &:focus {
            opacity: 1;
          }
        }
      }
    }
  }
}

